[tool.poetry]
name = "terminusbrowser"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
urwid = "^2.6.16"
requests = "^2.32.3"
pyfiglet = "^1.0.2"
librecaptcha = "^0.7.3"
html2text = "^2024.2.26"
beautifulsoup4 = "^4.12.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
